add address query, upgrade to 1.0.3
