# api.ts
@@ -4,7 +4,7 @@
  * MVC Bridge API Spec
  * API definition for Mvc Bridge provided apis
  *
- * The version of the OpenAPI document: 1.0.3
+ * The version of the OpenAPI document: 1.0.4
  * Contact: heqiming@metasv.com
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -160,6 +160,30 @@ export interface OrderWaiting {
      * @memberof OrderWaiting
      */
     fromAmount?: string;
+    /**
+     * State of your order(WAITING_REQUEST, CONFIRMING, PROCESSING).
+     * @type {string}
+     * @memberof OrderWaiting
+     */
+    state?: string;
+    /**
+     * The vault id of your target request.
+     * @type {string}
+     * @memberof OrderWaiting
+     */
+    targetVaultId?: string;
+    /**
+     * The address you want to bridge your asset to.
+     * @type {string}
+     * @memberof OrderWaiting
+     */
+    toAddress?: string;
+    /**
+     * Amount you can receive after the fee, use String for large values.
+     * @type {string}
+     * @memberof OrderWaiting
+     */
+    targetAmount?: string;
 }
 
 /**
