# openapi.yaml
@@ -2,7 +2,7 @@ openapi: 3.0.3
 info:
   title: MVC Bridge API Spec
   description: API definition for Mvc Bridge provided apis
-  version: 1.0.3
+  version: 1.0.4
   license:
     name: MIT License
     url: https://opensource.org/licenses/MIT
@@ -184,3 +184,15 @@ components:
         fromAmount:
           type: string
           description: Amount you sent, use String for large values.
+        state:
+          type: string
+          description: State of your order(WAITING_REQUEST, CONFIRMING, PROCESSING).
+        targetVaultId:
+          type: string
+          description: The vault id of your target request.
+        toAddress:
+          type: string
+          description: The address you want to bridge your asset to.
+        targetAmount:
+          type: string
+          description: Amount you can receive after the fee, use String for large values.
